Readme and run task works